# cardapio-projeto

./: README.md  gourmet.py  pyproject.toml  requirements.txt
pages/: cremoso.py  fruta.py  sorvete.py
