[project]
name = "cardapio"
version = "0.1.0"
description = ""
authors = [
    {name = "Vinícius Rotter",email = "rottervini@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.42.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
